<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_description">　　 This is an open source reading software newly developed by Kotlin, welcome to join us.</string>
    <string name="about_official_account">Official Accounts[开源阅读]</string>
    <string name="about_summary">Wechat official account [开源阅读软件]</string>
    <string name="accent">Accent</string>
    <string name="accent_background_diff">Need Difference between accent and background color</string>
    <string name="accent_text_diff">Need Difference between accent and text color</string>
    <string name="action_del">Delete</string>
    <string name="action_download">Download</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="adapt_special_style">适配特殊样式</string>
    <string name="add">Add</string>
    <string name="add_book_source">Add Book source</string>
    <string name="add_book_url">Add book url</string>
    <string name="add_group">Add to Groups</string>
    <string name="add_remote_book">RemoteBook</string>
    <string name="add_replace_rule">New replacement</string>
    <string name="add_rss_source">Add RSS source</string>
    <string name="add_to_bookshelf">Add to Bookshelf</string>
    <string name="add_to_group">Add to Group</string>
    <string name="add_to_text_context_menu_s">Long tap to display Legado·Search in the operation menu</string>
    <string name="add_to_text_context_menu_t">Text operation display Search</string>
    <string name="add_url">Add url</string>
    <string name="adjust_chapter_index">Adjust of chapter index</string>
    <string name="adjust_chapter_page">Adjust of chapter page</string>
    <string name="adjust_pos">Adjustment position</string>
    <string name="agree">Agree</string>
    <string name="all">All</string>
    <string name="all_book">All</string>
    <string name="all_bookmark">All bookmarks</string>
    <string name="all_chapter_num">%d chapters</string>
    <string name="all_read_time">Total read time</string>
    <string name="all_source">All Sources</string>
    <string name="allow_drop_down_refresh">Allow drop-down refresh</string>
    <string name="allow_update">Enable update</string>
    <string name="aloud_config">Speech settings</string>
    <string name="aloud_stop">Speak Stopped</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anti_alias">Anti-Aliasing</string>
    <string name="app_file_picker">App file picker</string>
    <string name="app_folder_picker">App folder picker</string>
    <string name="app_name">Legado</string>
    <string name="app_name_a">Legado·A</string>
    <string name="app_name_s">LegadoPlus</string>
    <string name="app_share_description">"Legado (YueDu 3.0) download link：
 https://github.com/LegadoTeam/legado/releases"</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_not_found">Can not find archive selected, continue to download ?</string>
    <string name="assists_key_config">Secondary button configuration</string>
    <string name="async_load_image">Load pictures asynchronously</string>
    <string name="audio">Audio</string>
    <string name="audio_pause">Pause</string>
    <string name="audio_play">Play</string>
    <string name="audio_play_s">Click to open the Playing</string>
    <string name="audio_play_t">Playing</string>
    <string name="audio_play_wake_lock">Audio service wake-up lock</string>
    <string name="audio_play_wake_lock_summary">The wake-up lock is enabled when playing audio, and some phones will be killed when the wake-up lock is turned on.</string>
    <string name="author">Author</string>
    <string name="author_show">Author: %s</string>
    <string name="auto_change_source">Change source automatically</string>
    <string name="auto_check_new_backup_s">打开软件时检查是否有新备份，有新备份时提示是否更新</string>
    <string name="auto_check_new_backup_t">自动检查新备份</string>
    <string name="auto_clear_expired">"Clear expired search histories automatically "</string>
    <string name="auto_clear_expired_summary">Search histories more than one day</string>
    <string name="auto_complete">Automatic completion</string>
    <string name="auto_dark_mode">Automatic switching dark mode</string>
    <string name="auto_dark_mode_s">Following system dark mode</string>
    <string name="auto_expand_find">Auto expand Discovery</string>
    <string name="auto_merge_audio_on_chapter_end">朗读完章节自动合并音频</string>
    <string name="auto_merge_audio_on_chapter_end_summary">开启后，朗读完当前章节会自动将该章节的缓存音频合并为WAV文件保存到下载目录</string>
    <string name="auto_next_page">Auto scroll</string>
    <string name="auto_next_page_speed">Auto scroll speed</string>
    <string name="auto_next_page_stop">Stop Auto scroll</string>
    <string name="auto_page_speed">Auto scroll speed</string>
    <string name="auto_play">自动播放</string>
    <string name="auto_save_cookie">CookieJar</string>
    <string name="auto_update">自动更新</string>
    <string name="auto_wrap">自动换行</string>
    <string name="autobackup_fail">"Autobackup failed
%s"</string>
    <string name="background">Background</string>
    <string name="background_color">Background color</string>
    <string name="background_image">Background image</string>
    <string name="background_image_blurring">Background image blurring</string>
    <string name="background_image_blurring_radius">Blurring radius</string>
    <string name="background_image_hint">"Disabled when 0, enable range from 1 to 25
The greater the radius, the stronger the effect of blurring"</string>
    <string name="backup">Backup</string>
    <string name="backup_path">Backup to</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="backup_summary">Backup the local and WebDav simultaneously</string>
    <string name="book_source">Book sources</string>
    <string name="btn_default_s">Default</string>
    <string name="cancel">Cancel</string>
    <string name="click_regional_config">Screen touch control</string>
    <string name="content">Content</string>
    <string name="cover_config">cover config</string>
    <string name="custom_page_key">Set page-turning buttons</string>
    <string name="disable_return_key">Disable return key</string>
    <string name="double_page_horizontal">Tablet/Landscape Dual Page</string>
    <string name="edit">Edit</string>
    <string name="enable">Enable</string>
    <string name="enable_optimize_render">启用绘制优化</string>
    <string name="expand_text_menu">Expand text selection menu</string>
    <string name="help">Help</string>
    <string name="import_by_qr_code">Import from QR code</string>
    <string name="import_default_rule">Import default rules</string>
    <string name="import_local">Import local</string>
    <string name="import_old_summary">Select a legacy backup folder</string>
    <string name="import_on_line">Import online</string>
    <string name="keep_light">Keep screen awake</string>
    <string name="key_page_on_long_press">Press and hold the key to turn the page</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="more_menu">More menu</string>
    <string name="mouse_wheel_page">Mouse wheel to turn page</string>
    <string name="next_chapter">Next</string>
    <string name="no_anim_scroll_page">Disable scroll click animation</string>
    <string name="ok">OK</string>
    <string name="only_latest_backup_s">Local backup keeps only the latest backup file</string>
    <string name="only_latest_backup_t">Keep only the latest backup</string>
    <string name="padding_display_cutouts">Padding display cutouts</string>
    <string name="page_touch_click_summary">左右边缘多少距离不会触发点击事件，默认为0px</string>
    <string name="page_touch_click_title">边缘点击阈值</string>
    <string name="page_touch_slop_summary">How far to slide to trigger a page slide (system default %s px)</string>
    <string name="page_touch_slop_title">Sliding Page Threshold</string>
    <string name="preview_image_by_click">Click to preview image</string>
    <string name="previous_chapter">Prior</string>
    <string name="progress_bar_behavior">Progress bar behavior</string>
    <string name="pt_hide_navigation_bar">Hide navigation bar</string>
    <string name="pt_hide_status_bar">Hide status bar</string>
    <string name="r_search_url">Search url(url)</string>
    <string name="read_bar_style_follow_page">read bar style follow page</string>
    <string name="read_body_to_lh">Extend to cutout</string>
    <string name="restore">Restore</string>
    <string name="restore_ignore">Bypass list</string>
    <string name="restore_ignore_summary">Ignore some contents while restoring</string>
    <string name="restore_summary">Restore from WebDAV first, Restore form the local backup on long click</string>
    <string name="rule_cover_url">CoverUrl(coverUrl)</string>
    <string name="screen_direction">Screen orientation</string>
    <string name="selectText">Long Tap to select text</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="show_brightness_view">Show brightness widget</string>
    <string name="show_read_title_addition">show read title addition area</string>
    <string name="sub_dir">Sub dir</string>
    <string name="sync_book_progress_plus_s">Sync cloud progress when re-entering the page (e.g., after screen off, returning from background, etc.) or when the network becomes available</string>
    <string name="sync_book_progress_plus_t">Sync Enhancement</string>
    <string name="sync_book_progress_s">Synchronize reading progress when entering / exiting the reading interface</string>
    <string name="sync_book_progress_t">Synchronous reading progress</string>
    <string name="text_bottom_justify">Text align bottom</string>
    <string name="text_full_justify">Text justified</string>
    <string name="use_zh_layout">Custom Chinese line feed</string>
    <string name="volume_key_page">Volume keys to turn page</string>
    <string name="volume_key_page_on_play">Volume keys to turn page when reading</string>
    <string name="web_dav_account">WebDav account</string>
    <string name="web_dav_account_s">Input your WebDav account</string>
    <string name="web_dav_pw">WebDav password</string>
    <string name="web_dav_pw_s">Input you WebDav authorized password</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="web_dav_url">WebDav server address</string>
    <string name="web_dav_url_s">Input you server address</string>
    <string name="webdav_device_name">Device name</string>
</resources>