<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.lib.prefs.NameListPreference android:entries="@array/screen_direction_title" android:title="@string/screen_direction" android:key="screenOrientation" android:defaultValue="0" android:entryValues="@array/screen_direction_value" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.NameListPreference android:entries="@array/screen_time_out" android:title="@string/keep_light" android:key="keep_light" android:defaultValue="0" android:entryValues="@array/screen_time_out_value" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/pt_hide_status_bar" android:key="hideStatusBar" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/pt_hide_navigation_bar" android:key="hideNavigationBar" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/read_body_to_lh" android:key="readBodyToLh" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/padding_display_cutouts" android:key="paddingDisplayCutouts" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.NameListPreference android:entries="@array/double_page_title" android:title="@string/double_page_horizontal" android:key="doubleHorizontalPage" android:defaultValue="0" android:entryValues="@array/double_page_value" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.NameListPreference android:entries="@array/progress_bar_behavior_title" android:title="@string/progress_bar_behavior" android:key="progressBarBehavior" android:defaultValue="page" android:entryValues="@array/progress_bar_behavior_value" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/use_zh_layout" android:key="useZhLayout" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/text_full_justify" android:key="textFullJustify" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/text_bottom_justify" android:key="textBottomJustify" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/adapt_special_style" android:key="adaptSpecialStyle" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/mouse_wheel_page" android:key="mouseWheelPage" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/volume_key_page" android:key="volumeKeyPage" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/volume_key_page_on_play" android:key="volumeKeyPageOnPlay" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/key_page_on_long_press" android:key="keyPageOnLongPress" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.Preference android:title="@string/page_touch_slop_title" android:key="pageTouchSlop" android:summary="@string/page_touch_slop_summary" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.Preference android:title="@string/page_touch_click_title" android:key="pageTouchClick" android:summary="@string/page_touch_click_summary" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/auto_change_source" android:key="autoChangeSource" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/selectText" android:key="selectText" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/show_brightness_view" android:key="showBrightnessView" android:defaultValue="true" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/no_anim_scroll_page" android:key="noAnimScrollPage" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/preview_image_by_click" android:key="previewImageByClick" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/enable_optimize_render" android:key="optimizeRender" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.Preference android:title="@string/click_regional_config" android:key="clickRegionalConfig" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/disable_return_key" android:key="disableReturnKey" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.Preference android:title="@string/custom_page_key" android:key="customPageKey" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/expand_text_menu" android:key="expandTextMenu" android:defaultValue="false" app:iconSpaceReserved="false" app:isBottomBackground="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/show_read_title_addition" android:key="showReadTitleAddition" android:defaultValue="true" />
    <io.legado.app.lib.prefs.SwitchPreference android:title="@string/read_bar_style_follow_page" android:key="readBarStyleFollowPage" android:defaultValue="false" />
</androidx.preference.PreferenceScreen>
