<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_add" android:id="@id/menu_add" android:title="@string/add" app:showAsAction="always" />
    <item android:icon="@drawable/ic_import" android:id="@id/menu_import_local" android:title="@string/import_local" app:showAsAction="never" />
    <item android:icon="@drawable/ic_import" android:id="@id/menu_import_onLine" android:title="@string/import_on_line" app:showAsAction="never" />
    <item android:icon="@drawable/ic_import" android:id="@id/menu_import_qr" android:title="@string/import_by_qr_code" app:showAsAction="never" />
    <item android:icon="@drawable/ic_import" android:id="@id/menu_import_default" android:title="@string/import_default_rule" app:showAsAction="never" />
    <item android:icon="@drawable/ic_help" android:id="@id/menu_help" android:title="@string/help" app:showAsAction="never" />
</menu>
