<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="?actionBarStyle" android:id="@id/tool_bar" android:layout_width="match_parent" android:layout_height="wrap_content" app:popupTheme="@style/AppTheme.PopupOverlay" app:title="@string/cover_config" app:titleTextAppearance="@style/ToolbarTitle" />
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <io.legado.app.lib.theme.view.ThemeCheckBox android:id="@id/cb_enable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enable" />
            <io.legado.app.ui.widget.text.TextInputLayout android:paddingTop="3.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <io.legado.app.lib.theme.view.ThemeEditText android:id="@id/edit_search_url" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/r_search_url" />
            </io.legado.app.ui.widget.text.TextInputLayout>
            <io.legado.app.ui.widget.text.TextInputLayout android:paddingTop="3.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <io.legado.app.lib.theme.view.ThemeEditText android:id="@id/edit_cover_url_rule" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/rule_cover_url" />
            </io.legado.app.ui.widget.text.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.flexbox.FlexboxLayout android:paddingLeft="12.0dp" android:paddingRight="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" app:flexWrap="wrap" app:justifyContent="space_between">
        <io.legado.app.ui.widget.text.AccentTextView android:id="@id/tv_footer_left" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_default_s" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/secondaryText" android:id="@id/tv_cancel" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
            <io.legado.app.ui.widget.text.AccentTextView android:id="@id/tv_ok" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" />
        </LinearLayout>
    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>
