<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="?android:selectableItemBackground" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.lib.theme.view.ThemeCheckBox android:textColor="@color/primaryText" android:layout_gravity="center" android:id="@id/cb_source" android:layout_width="0.0dp" android:layout_height="wrap_content" android:singleLine="true" app:layout_constraintBottom_toTopOf="@id/title_example" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/swt_enabled" app:layout_constraintTop_toTopOf="parent" />
    <io.legado.app.lib.theme.view.ThemeSwitch android:name="@string/enable" android:id="@id/swt_enabled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dp" android:layout_marginRight="6.0dp" app:layout_constraintBottom_toTopOf="@id/title_example" app:layout_constraintRight_toLeftOf="@id/iv_edit" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:id="@id/iv_edit" android:background="?android:selectableItemBackgroundBorderless" android:padding="6.0dp" android:layout_width="36.0dp" android:layout_height="36.0dp" android:src="@drawable/ic_edit" android:tint="@color/primaryText" android:contentDescription="@string/edit" app:layout_constraintBottom_toTopOf="@id/title_example" app:layout_constraintRight_toLeftOf="@id/iv_menu_more" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_menu_more" android:background="?selectableItemBackgroundBorderless" android:padding="6.0dp" android:layout_width="36.0dp" android:layout_height="36.0dp" android:src="@drawable/ic_more_vert" android:tint="@color/primaryText" android:contentDescription="@string/more_menu" app:layout_constraintBottom_toTopOf="@id/title_example" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="12.0sp" android:id="@id/title_example" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
