<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/vw_menu_root" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/vw_menu_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:contentDescription="@string/content" />
    <io.legado.app.ui.widget.TitleBar android:theme="?actionBarStyle" android:id="@id/title_bar" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent" app:opaque="true">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/title_bar_addition" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/tv_chapter_name" android:paddingLeft="10.0dp" android:paddingRight="10.0dp" android:visibility="gone" android:layout_width="0.0dp" android:layout_height="wrap_content" android:singleLine="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/tv_source_action" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:id="@id/tv_chapter_url" android:paddingLeft="10.0dp" android:paddingRight="10.0dp" android:visibility="gone" android:layout_width="0.0dp" android:layout_height="wrap_content" android:singleLine="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/tv_source_action" app:layout_constraintTop_toBottomOf="@id/tv_chapter_name" />
            <io.legado.app.ui.widget.text.AccentBgTextView android:gravity="center" android:id="@id/tv_source_action" android:paddingLeft="6.0dp" android:paddingRight="6.0dp" android:layout_width="wrap_content" android:layout_height="0.0dp" android:layout_margin="1.0dp" android:maxWidth="120.0dp" android:text="@string/book_source" app:layout_constraintBottom_toBottomOf="@id/tv_chapter_url" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:radius="2.0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </io.legado.app.ui.widget.TitleBar>
    <LinearLayout android:orientation="vertical" android:id="@id/bottom_menu" android:background="@color/background_menu" android:layout_width="match_parent" android:layout_height="wrap_content" android:importantForAccessibility="no" app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="20.0dp" android:layout_marginBottom="10.0dp" android:importantForAccessibility="no">
            <TextView android:textSize="14.0sp" android:textColor="@color/primaryText" android:id="@id/tv_pre" android:background="?android:selectableItemBackgroundBorderless" android:paddingTop="10.0dp" android:paddingBottom="10.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/previous_chapter" android:layout_marginStart="10.0dp" android:layout_marginEnd="10.0dp" />
            <io.legado.app.lib.theme.view.ThemeSeekBar android:layout_gravity="center_vertical" android:id="@id/seek_read_page" android:layout_width="0.0dp" android:layout_height="25.0dp" android:layout_weight="1.0" />
            <TextView android:textSize="14.0sp" android:textColor="@color/primaryText" android:id="@id/tv_next" android:background="?android:selectableItemBackgroundBorderless" android:paddingTop="10.0dp" android:paddingBottom="10.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next_chapter" android:layout_marginStart="10.0dp" android:layout_marginEnd="10.0dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
